# folio

./: .coverage  README.md  pyproject.toml
src/folio/: __init__.py  _error.py
src/folio/blocks/: __init__.py  asset.py  base.py  data.py  layout.py  text.py
src/folio/renderers/: __init__.py  datadive.py  formatting.py  html.py  normalize.py  plot.py  profile.py  table.py
src/folio/static/: report.css  report.js
src/folio/templates/: report.html.j2
tests/: conftest.py
tests/test_blocks/: test_base.py  test_layout.py  test_text.py
tests/test_renderers/: test_datadive.py  test_html.py  test_normalize.py  test_plot.py  test_profile.py  test_table.py
